k8s/config-server-deployment.yaml
# 📑 Config-Server Deployment (Fase 2: Contrato de Infraestructura)
# ==========================================================
# Este archivo define el estado deseado para el servicio base de configuración.
# Estándar 2026: Resource Limits, Labels Decorativas y Git Configuration.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  labels:
    app: config-server
    part-of: ecommerce-platform
spec:
  replicas: 1 # Mantenemos 1 por el modo conservador de RAM
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: cloudnative/config-server:1.0.0-SNAPSHOT
          imagePullPolicy: Never # Crucial para usar la imagen local cargada en Minikube
          ports:
            - containerPort: 8888
          resources:
            # Límites para el modo conservador (2 CPUs / 4GB RAM)
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi" # Máximo de memoria para evitar OOMKills
              cpu: "500m"
          # Readiness Probe: Kubernetes espera a que el endpoint /actuator/health esté listo
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8888
            initialDelaySeconds: 20
            periodSeconds: 10
          # Liveness Probe: Reinicia el contenedor si se queda colgado
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8888
            initialDelaySeconds: 30
            periodSeconds: 20
